# default-app

./: .travis.yml  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: conf.py-tpl  index.rst  quickstart.rst
dotgithub/workflows/: ci.yml  code_quality.yml
project_name/: __init__.py-tpl  apps.py-tpl
testapp/: settings.py-tpl
